@@ -3,6 +3,7 @@ dvdisaster (0.79.5-3) UNRELEASED; urgency=medium
   * Team upload.
   * Fix another build failure on kFreeBSD.
   * Bump Standards Version to 4.0.1.
+  * Regenerate patches with git version 2.14.0.
 
  -- Carlos Maddela <e7appew@gmail.com>  Tue, 08 Aug 2017 03:13:26 +1000
 
